# pj-aidev-PromptEng2025

./: .gitignore  README.md  batch_test_generator.py  model_utils.py  models_config.json  ollama_client.py  pyproject.toml  requirements.txt  run_analysis.py  run_test_case_generator.py  test_case_generator.py  visualize_results.py
all_comparison/: best_model_comparison.py  comprehensive_summary_table.csv  comprehensive_summary_table.txt  comprehensive_table_generator.py  input_tokens_comparison.py
analysis/: __init__.py  analysis_reporter.py  backup_run_analysis.py  data_loader.py  dataset_aware_plots.py  problem_classifier.py  traditional_plots.py
batch/: README.md  batch_test_generator.py  run_batch_test_case_generator.py
generated_tests/: test_humaneval_0.py  test_humaneval_0.stats.json  test_humaneval_0_ast.py  test_humaneval_0_ast.stats.json  test_humaneval_0_ast_false.py  test_humaneval_0_ast_false.stats.json  test_humaneval_0_ast_success.stats.json  test_humaneval_0_docstring.py  test_humaneval_0_docstring.stats.json  test_humaneval_0_docstring_ast.py  test_humaneval_0_docstring_ast.stats.json  test_humaneval_0_docstring_ast_success.py  test_humaneval_0_docstring_ast_success.stats.json  test_humaneval_0_docstring_success.py  test_humaneval_0_false.py  test_humaneval_0_success.stats.json  test_humaneval_1.py  test_humaneval_1.stats.json  test_humaneval_10.py  test_humaneval_10.stats.json  test_humaneval_100_docstring_ast_false.py  test_humaneval_100_success.stats.json  test_humaneval_101_docstring_ast_success.py  test_humaneval_101_docstring_success.py  (+750 more)
(+5352 files in other folders)
